kubernetes/media/sonarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
  namespace: media
spec:
  serviceName: "sonarr"
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      securityContext:
        fsGroup: 25343
      automountServiceAccountToken: false
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.12
          resources:
            requests:
              cpu: 1000m
              memory: 500Mi
              ephemeral-storage: 32Gi
            limits:
              cpu: 2000m
              memory: 4Gi
              ephemeral-storage: 32Gi
          ports:
            - name: sonarr-http
              containerPort: 8989
              protocol: TCP
          volumeMounts:
            - name: sonarr-data
              mountPath: /config
            - name: homelab-nfs
              mountPath: /tv
      volumes:
        - name: homelab-nfs
          nfs:
            server: 192.168.1.70
            path: /volume1/library/Shows
  volumeClaimTemplates:
    - metadata:
        name: sonarr-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "longhorn"
        resources:
          requests:
            storage: 32Gi
